force-app/main/default/objects/AWSCalloutFields__mdt/AWSCalloutFields__mdt.object-meta.xml
<CustomObject>
    <label>AWSCalloutFields</label>
    <pluralLabel>AWSCalloutFields</pluralLabel>
</CustomObject>