force-app/main/default/objects/AWSCalloutFields__mdt/fields/DestinationFieldName__c.field-meta.xml
<CustomField>
    <fullName>DestinationFieldName__c</fullName>
    <label>DestinationFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>