force-app/main/default/objects/AWSCalloutFields__mdt/fields/IncludeFieldIfNull__c.field-meta.xml
<CustomField>
    <fullName>IncludeFieldIfNull__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IncludeFieldIfNull</label>
    <type>Checkbox</type>
</CustomField>