force-app/main/default/objects/AWSCalloutFields__mdt/fields/SourceFieldName__c.field-meta.xml
<CustomField>
    <fullName>SourceFieldName__c</fullName>
    <label>SourceFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>