force-app/main/default/objects/AWSCalloutFields__mdt/listViews/Account_Subsidiary.listView-meta.xml
<ListView>
    <fullName>Account_Subsidiary</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>DestinationFieldName__c</columns>
    <columns>SourceFieldName__c</columns>
    <columns>SourceObject__c</columns>
    <columns>DataType__c</columns>
    <columns>IncludeFieldIfNull__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SourceObject__c</field>
        <operation>contains</operation>
        <value>subsid</value>
    </filters>
    <label>Account Subsidiary</label>
    <language>en_US</language>
</ListView>