force-app/main/default/objects/AWSCalloutFields__mdt/listViews/AccountContactRelation.listView-meta.xml
<ListView>
    <fullName>AccountContactRelation</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SourceObject__c</field>
        <operation>equals</operation>
        <value>AccountContactRelation</value>
    </filters>
    <label>AccountContactRelation</label>
    <language>en_US</language>
</ListView>