force-app/main/default/objects/AWSCalloutFields__mdt/listViews/All_view.listView-meta.xml
<ListView>
    <fullName>All_view</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>DataType__c</columns>
    <columns>IncludeFieldIfNull__c</columns>
    <columns>SourceFieldName__c</columns>
    <columns>SourceObject__c</columns>
    <columns>DestinationFieldName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All view</label>
</ListView>