force-app/main/default/objects/AWSCalloutFields__mdt/listViews/OrderItem.listView-meta.xml
<ListView>
    <fullName>OrderItem</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>DataType__c</columns>
    <columns>DestinationFieldName__c</columns>
    <columns>IncludeFieldIfNull__c</columns>
    <columns>SourceFieldName__c</columns>
    <columns>SourceObject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SourceObject__c</field>
        <operation>equals</operation>
        <value>OrderItem</value>
    </filters>
    <label>OrderItem</label>
</ListView>